--- a/paper/fsa-archive-cv.bib
+++ b/paper/fsa-archive-cv.bib
@@ -1,3 +1,15 @@
+@article{russakovsky2015imagenet,
+  title={Imagenet large scale visual recognition challenge},
+  author={Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and others},
+  journal={International journal of computer vision},
+  volume={115},
+  number={3},
+  pages={211--252},
+  year={2015},
+  publisher={Springer}
+}
+
+
 @article{dijkshoorn2018rijksmuseum,
   title={The Rijksmuseum collection as linked data},
   author={Dijkshoorn, Chris and Jongma, Lizzy and Aroyo, Lora and Van Ossenbruggen, Jacco and Schreiber, Guus and Ter Weele, Wesley and Wielemaker, Jan},
@@ -162,6 +174,14 @@
   pages={1449--1457},
   year={2015}
 }
+
+@book{tagg2009disciplinary,
+  title={The disciplinary frame: Photographic truths and the capture of meaning},
+  author={Tagg, John},
+  year={2009},
+  publisher={U of Minnesota Press}
+}
+
 
 @inproceedings{caesar2018coco,
   title={Coco-stuff: Thing and stuff classes in context},
@@ -328,22 +348,6 @@
     abstract = "Visual question answering (VQA) is a challenging task that requires a computer system to understand both a question and an image. While there is much research on VQA in English, there is a lack of datasets for other languages, and English annotation is not directly applicable in those languages. To deal with this, we have created a Japanese VQA dataset by using crowdsourced annotation with images from the Visual Genome dataset. This is the first such dataset in Japanese. As another contribution, we propose a cross-lingual method for making use of English annotation to improve a Japanese VQA system. The proposed method is based on a popular VQA method that uses an attention mechanism. We use attention maps generated from English questions to help improve the Japanese VQA task. The proposed method experimentally performed better than simply using a monolingual corpus, which demonstrates the effectiveness of using attention maps to transfer cross-lingual information.",
 }
 
-@inproceedings{derby-etal-2018-using,
-    title = "Using Sparse Semantic Embeddings Learned from Multimodal Text and Image Data to Model Human Conceptual Knowledge",
-    author = "Derby, Steven  and
-      Miller, Paul  and
-      Murphy, Brian  and
-      Devereux, Barry",
-    booktitle = "Proceedings of the 22nd Conference on Computational Natural Language Learning",
-    month = oct,
-    year = "2018",
-    address = "Brussels, Belgium",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/K18-1026",
-    doi = "10.18653/v1/K18-1026",
-    pages = "260--270",
-    abstract = "Distributional models provide a convenient way to model semantics using dense embedding spaces derived from unsupervised learning algorithms. However, the dimensions of dense embedding spaces are not designed to resemble human semantic knowledge. Moreover, embeddings are often built from a single source of information (typically text data), even though neurocognitive research suggests that semantics is deeply linked to both language and perception. In this paper, we combine multimodal information from both text and image-based representations derived from state-of-the-art distributional models to produce sparse, interpretable vectors using Joint Non-Negative Sparse Embedding. Through in-depth analyses comparing these sparse models to human-derived behavioural and neuroimaging data, we demonstrate their ability to predict interpretable linguistic descriptions of human ground-truth semantic knowledge.",
-}
 
 @inproceedings{jiang-etal-2019-reo,
     title = "{REO}-Relevance, Extraness, Omission: A Fine-grained Evaluation for Image Captioning",
@@ -518,22 +522,6 @@
     doi = "10.18653/v1/P19-1652",
     pages = "6514--6524",
     abstract = "Image Captioning aims at generating a short description for an image. Existing research usually employs the architecture of CNN-RNN that views the generation as a sequential decision-making process and the entire dataset vocabulary is used as decoding space. They suffer from generating high frequent n-gram with irrelevant words. To tackle this problem, we propose to construct an image-grounded vocabulary, based on which, captions are generated with limitation and guidance. In specific, a novel hierarchical structure is proposed to construct the vocabulary incorporating both visual information and relations among words. For generation, we propose a word-aware RNN cell incorporating vocabulary information into the decoding process directly. Reinforce algorithm is employed to train the generator using constraint vocabulary as action space. Experimental results on MS COCO and Flickr30k show the effectiveness of our framework compared to some state-of-the-art models.",
-}
-
-@inproceedings{madhyastha-etal-2019-vifidel,
-    title = "{VIFIDEL}: Evaluating the Visual Fidelity of Image Descriptions",
-    author = "Madhyastha, Pranava  and
-      Wang, Josiah  and
-      Specia, Lucia",
-    booktitle = "Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics",
-    month = jul,
-    year = "2019",
-    address = "Florence, Italy",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/P19-1654",
-    doi = "10.18653/v1/P19-1654",
-    pages = "6539--6550",
-    abstract = "We address the task of evaluating image description generation systems. We propose a novel image-aware metric for this task: VIFIDEL. It estimates the faithfulness of a generated caption with respect to the content of the actual image, based on the semantic similarity between labels of objects depicted in images and words in the description. The metric is also able to take into account the relative importance of objects mentioned in human reference descriptions during evaluation. Even if these human reference descriptions are not available, VIFIDEL can still reliably evaluate system descriptions. The metric achieves high correlation with human judgments on two well-known datasets and is competitive with metrics that depend on and rely exclusively on human references.",
 }
 
 @inproceedings{hessel-etal-2015-image,
