--- a/paper/fsa-archive-cv.bib
+++ b/paper/fsa-archive-cv.bib
@@ -1,5 +1,5 @@
 @article{russakovsky2015imagenet,
-  title={Imagenet large scale visual recognition challenge},
+  title={{ImageNet} large scale visual recognition challenge},
   author={Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and others},
   journal={International journal of computer vision},
   volume={115},
@@ -29,7 +29,7 @@
 }
 
 @article{zimmer2015twitter,
-  title={The Twitter Archive at the Library of Congress: Challenges for information practice and information policy},
+  title={The {T}witter Archive at the Library of Congress: Challenges for information practice and information policy},
   author={Zimmer, Michael},
   journal={First Monday},
   volume={20},
@@ -81,7 +81,7 @@
 }
 
 @article{vinyals2016show,
-  title={Show and tell: Lessons learned from the 2015 mscoco image captioning challenge},
+  title={Show and tell: Lessons learned from the 2015 {MS COCO} image captioning challenge},
   author={Vinyals, Oriol and Toshev, Alexander and Bengio, Samy and Erhan, Dumitru},
   journal={IEEE transactions on pattern analysis and machine intelligence},
   volume={39},
@@ -184,7 +184,7 @@
 
 
 @inproceedings{caesar2018coco,
-  title={Coco-stuff: Thing and stuff classes in context},
+  title={{COCO}-stuff: Thing and stuff classes in context},
   author={Caesar, Holger and Uijlings, Jasper and Ferrari, Vittorio},
   booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
   pages={1209--1218},
@@ -192,7 +192,7 @@
 }
 
 @inproceedings{mensink2014rijksmuseum,
-  title={The Rijksmuseum challenge: Museum-centered visual recognition},
+  title={The {R}ijksmuseum challenge: Museum-centered visual recognition},
   author={Mensink, Thomas and Van Gemert, Jan},
   booktitle={Proceedings of International Conference on Multimedia Retrieval},
   pages={451--454},
@@ -200,7 +200,7 @@
 }
 
 @article{weibel1997dublin,
-  title={The Dublin Core: a simple content description model for electronic resources},
+  title={The {D}ublin {C}ore: a simple content description model for electronic resources},
   author={Weibel, Stuart},
   journal={Bulletin of the American Society for Information Science and Technology},
   volume={24},
@@ -272,7 +272,7 @@
 
 @misc{pixplot,
   author = {Douglas Duhaime},
-  title = {PixPlot: Visualize large image collections with WebGL},
+  title = {{PixPlot}: Visualize large image collections with {WebGL}},
   year = {2019},
   publisher = {GitHub},
   journal = {GitHub repository},
@@ -382,27 +382,6 @@
     doi = "10.18653/v1/D19-1210",
     pages = "2034--2045",
     abstract = "Images and text co-occur constantly on the web, but explicit links between images and sentences (or other intra-document textual units) are often not present. We present algorithms that discover image-sentence relationships without relying on explicit multimodal annotation in training. We experiment on seven datasets of varying difficulty, ranging from documents consisting of groups of images captioned post hoc by crowdworkers to naturally-occurring user-generated multimodal documents. We find that a structured training objective based on identifying whether collections of images and sentences co-occur in documents can suffice to predict links between specific sentences and specific images within the same document at test time.",
-}
-
-@inproceedings{jiang-etal-2019-tiger,
-    title = "{TIGE}r: Text-to-Image Grounding for Image Caption Evaluation",
-    author = "Jiang, Ming  and
-      Huang, Qiuyuan  and
-      Zhang, Lei  and
-      Wang, Xin  and
-      Zhang, Pengchuan  and
-      Gan, Zhe  and
-      Diesner, Jana  and
-      Gao, Jianfeng",
-    booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)",
-    month = nov,
-    year = "2019",
-    address = "Hong Kong, China",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/D19-1220",
-    doi = "10.18653/v1/D19-1220",
-    pages = "2141--2152",
-    abstract = "This paper presents a new metric called TIGEr for the automatic evaluation of image captioning systems. Popular metrics, such as BLEU and CIDEr, are based solely on text matching between reference captions and machine-generated captions, potentially leading to biased evaluations because references may not fully cover the image content and natural language is inherently ambiguous. Building upon a machine-learned text-image grounding model, TIGEr allows to evaluate caption quality not only based on how well a caption represents image content, but also on how well machine-generated captions match human-generated captions. Our empirical tests show that TIGEr has a higher consistency with human judgments than alternative existing metrics. We also comprehensively assess the metric{'}s effectiveness in caption evaluation by measuring the correlation between human judgments and metric scores.",
 }
 
 @inproceedings{jiang-etal-2019-reo,
