--- a/talk/enriching_photographic_archives.tex
+++ b/talk/enriching_photographic_archives.tex
@@ -182,7 +182,7 @@ using Image Region Segmentation}
 
   $^{2}$ Assistant Professor of Digital Humanities\\
   University of Richmond\\
-  \texttt{laurentilon.com}\\
+  \texttt{laurentilton.com}\\
 
 }
 % End changes
